--- a/homepage_style.css
+++ b/homepage_style.css
@@ -21,7 +21,7 @@
 }
 
 body {
-    background-image: url('images/sept16.jpeg'); /* Replace 'background.jpg' with the path to your image */
+    background-image: url('images/background1.jpeg'); 
     background-repeat: no-repeat;
     background-size: cover; /* Options: contain, cover, auto, etc. */
     background-position: center center; /* Options: left top, center center, right bottom, etc. */
